# sdl3test

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.c
